--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@
 /.vs
 /CLLama.Console/bin
 /CLLama.Console/obj
+/CLLama.Console/models/*.gguf
 /CLLama.Infrastructure/bin
 /CLLama.Infrastructure/obj
